# openblasctl

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: ctl.r  openblas_get_num_threads.r  openblas_set_num_threads.r  openblasctl-package.r
man/: openblas_get_num_threads.Rd  openblas_set_num_threads.Rd  openblasctl-package.Rd
src/: Makevars  Makevars.in  ctl.c  openblasctl_native.c
